Build ++ Errors
SVN-Revision: 10495